@@ -10,6 +10,7 @@ use LedgerSMB::App_Module;
 use LedgerSMB::Business_Unit;
 use LedgerSMB::Template;
 use LedgerSMB::Setting::Sequence;
+use LedgerSMB::Report::Listings::Business_Unit;
 use Carp;
 
 $Carp::Verbose = 1;
@@ -126,38 +127,7 @@ If set, excludes those which are not associated with customers/vendors.
 
 sub list {
     my ($request) = @_;
-    $request->{control_code} = '';
-    $request->{class_id} = 0 unless $request->{class_id} == 0;
-    my $b_unit = LedgerSMB::Business_Unit->new(%$request);
-    my $template = LedgerSMB::Template->new(
-        user =>$request->{_user},
-        locale => $request->{_locale},
-        path => 'UI',
-        template => 'form-dynatable',
-        format => 'HTML'
-    );
-    my $cols;
-    @$cols = qw(id control_code description start_date end_date);
-    my $heading = {
-                  id => $request->{_locale}->text('ID'),
-        control_code => $request->{_locale}->text('Control Code'),
-         description => $request->{_locale}->text('Description'),
-          start_date => $request->{_locale}->text('Start Date'),
-            end_date => $request->{_locale}->text('End Date'),
-    };
-    my $rows;
-    @$rows = $b_unit->list($request->{id}); 
-    my $base_href= "business_unit.pl?action=edit";
-    for $row(@$rows){
-        $row->{control_code} = {text => $row->{control_code},
-                                href => "$base_href&id=$row->{id}"};
-    }
-    $template->render({
-         form    => $request,
-         heading => $heading,
-         rows    => $rows,
-         columns => $cols,
-    });
+    LedgerSMB::Report::Listings::Business_Unit->new(%$request)->render($request);
 }
 
 =item delete
